update thumbnail image

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
   <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+  <link rel="image_src" href="images/tung-name-logo.png">
   <script type="text/javascript">
   $(document).ready(function() {
 $(".fancy-pic").fancybox({
