--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>T U N G</title>
+  <meta property="og:image" content="https://github.com/nguyenxtungdesign/website_logo/blob/master/tung-name-logo.png" />
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="font/stylesheet.css" type="text/css" charset="utf-8" />
@@ -21,7 +22,6 @@
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
   <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
-  <link rel="image_src" href="images/tung-name-logo.png">
   <script type="text/javascript">
   $(document).ready(function() {
 $(".fancy-pic").fancybox({
