--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>T U N G</title>
-  <meta property="og:image" content="https://github.com/nguyenxtungdesign/website_logo/blob/master/tung-name-logo.png" />
+  <meta property="og:image" content="https://github.com/nguyenxtungdesign/website_logo/blob/master/tung-name-logo.png">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="font/stylesheet.css" type="text/css" charset="utf-8" />
