add icon on bar

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-<head>
+<head profile="https://nguyenxtungdesign.github.io">
   <meta charset="utf-8">
   <title>T U N G</title>
+  <link rel="icon"
+      type="image/png"
+      href="images/favicon.png">
   <meta property="og:image" content="https://github.com/nguyenxtungdesign/website_logo/blob/master/tung-name-logo.png">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
