add thumbnail img

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
   <link rel="icon"
       type="image/png"
       href="images/favicon.png">
-  <meta property="og:image" content="https://github.com/nguyenxtungdesign/website_logo/blob/master/tung-name-logo.png">
+  <meta property="og:image" content="images/site-thumbnail.png"/>
+  <meta property="og:type" content="website"/>
+  <meta property="og:url" content="https://nguyenxtungdesign.github.io" />
+  <meta property="og:title" content="TUNG's graphic/web design portfolio" />
+  <meta property="og:description" content="Click to see my portfolio" />
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="font/stylesheet.css" type="text/css" charset="utf-8" />
