--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@ $(".fancyYoutube").fancybox({
   <h1 id="about">ABOUT</h1>
 </div>
 <div class="about-container">
-  <img class="rounded-portrait" src="images/mini-logo.png" alt="mini logo">
+  <img class="rounded-portrait" src="images/big-logo.png" alt="big logo">
   <div class="about-text-wrapper">
   <h4>Nguyen Xuan Tung</h4>
   <p >私は、東京デザイン専門学校グラッフィック科WEB専攻で在学中の学生です。<br>
