--- a/index.html
+++ b/index.html
@@ -507,8 +507,8 @@ $(".fancyYoutube").fancybox({
   </div>
   <div class="sns-and-mailbox">
     <div class="sns">
-      <a href="https://www.facebook.com/tungxauxa"><ul>
-        <i class="fab fa-facebook"></i>
+      <a href="https://www.linkedin.com/in/xuan-tung-nguyen-3a6399193/"><ul>
+        <i class="fab fa-linkedin"></i>
         <p>Nguyen Xuan Tung</p>
       </ul></a>
       <a href="https://www.instagram.com/tungmit00/"><ul>
@@ -519,9 +519,9 @@ $(".fancyYoutube").fancybox({
         <i class="fas fa-phone-square-alt"></i>
         <p>080-4832-2258</p>
       </ul></a>
-      <a href="mailto: tungmit11@gmail.com"><ul>
+      <a href="mailto: nguyen.x.tung.design@gmail.com"><ul>
         <i class="fas fa-envelope"></i>
-        <p>tungmit11@gmail.com</p>
+        <p>nguyen.x.tung.design@gmail.com</p>
       </ul></a>
     </div>
 
