--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon"
       type="image/png"
       href="images/favicon.png">
-  <meta property="og:image" content="images/site-thumbnail.png"/>
+  <meta property="og:image" content="images/big-logo.png"/>
   <meta property="og:type" content="website"/>
   <meta property="og:url" content="https://nguyenxtungdesign.github.io" />
   <meta property="og:title" content="TUNG's graphic/web design portfolio" />
