add Lumine adver

--- a/index.html
+++ b/index.html
@@ -373,7 +373,10 @@ $(".fancyYoutube").fancybox({
     </a>
     </div>
   <div class="grid-item item22">
-    <img src="" alt=""></div>
+  <a data-fancybox="images" href="images/work-full-size/lumine-summer-sale-full.png">
+    <img src="images/work/Lumine-summer-sale.png" alt="">
+  </a>
+  </div>
 
 </div>
 
