--- a/index.html
+++ b/index.html
@@ -395,8 +395,8 @@ $(".fancyYoutube").fancybox({
 ベトナムから来ました。日本で３年間すみました。よろしくお願いします。</p>
 <p>2017 10月 来日留学 <br>
 2018 日本語能力試験 N2 取得 <br>
-2019 ABK COLLEGE 日本語学校卒業 <br>
-2020 4月東京デザイン専門学校　在学中</p>
+2019 3月 ABK COLLEGE 日本語学校卒業 <br>
+2019 4月 東京デザイン専門学校-入学　(2021年卒業見込)</p>
 </div>
 </div>
 </section>
