--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>T U N G</title>
+  <link rel="icon"
+    type="image/png"
+    href="pics/home/favicon.png">
+<meta property="og:image" content="pics/home/share-thumbnail-pic.png"/>
+<meta property="og:type" content="website"/>
+<meta property="og:url" content="https://nguyenxtungdesign.github.io" />
+<meta property="og:title" content="TUNG's graphic/web design portfolio" />
+<meta property="og:description" content="Click to see my portfolio" />
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
