--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
   <div class="slideshow-container">
     <div class="slide">
       <div class="slide-img-wrapper">
-        <img src="pics/project/web-1.png" alt="">
+        <a href="https://nguyenxtungdesign.github.io/whistleandfruits/">
+          <img src="pics/project/web-1.png" alt="">
+        </a>
       </div>
       <div class="description">
         <div>
@@ -71,13 +73,15 @@
         </div>
         <div>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mollis mattis arcu, sed malesuada risus scelerisque eu. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed eu luctus orci.</p>
-          <a href="">See more >></a>
+          <a href="https://nguyenxtungdesign.github.io/whistleandfruits/">See more >></a>
         </div>
       </div>
     </div>
     <div class="slide">
       <div class="slide-img-wrapper">
+      <a href="https://nguyenxtungdesign.github.io/cafedorishasu/">
         <img src="pics/project/web-2.png" alt="">
+      </a>
       </div>
       <div class="description">
         <div>
@@ -86,13 +90,15 @@
         </div>
         <div>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mollis mattis arcu, sed malesuada risus scelerisque eu. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed eu luctus orci.</p>
-          <a href="">See more >></a>
+          <a href="https://nguyenxtungdesign.github.io/cafedorishasu/">See more >></a>
         </div>
       </div>
     </div>
     <div class="slide">
       <div class="slide-img-wrapper">
-        <img src="pics/project/web-3.png" alt="">
+        <a href="https://preview.webflow.com/preview/project-a0f8f9?utm_medium=preview_link&utm_source=dashboard&utm_content=project-a0f8f9&preview=84a1e55691f938078f61c1f112680c3d&mode=preview" target="_blank">
+          <img src="pics/project/web-3.png" alt="">
+        </a>
       </div>
       <div class="description">
         <div>
@@ -101,7 +107,9 @@
         </div>
         <div>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mollis mattis arcu, sed malesuada risus scelerisque eu. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed eu luctus orci.</p>
-          <a href="">See more >></a>
+          <a href="https://preview.webflow.com/preview/project-a0f8f9?utm_medium=preview_link&utm_source=dashboard&utm_content=project-a0f8f9&preview=84a1e55691f938078f61c1f112680c3d&mode=preview" target="_blank">
+            See more >>
+          </a>
         </div>
       </div>
     </div>
@@ -122,7 +130,9 @@
     </div>
     <div class="slide">
       <div class="slide-img-wrapper">
-        <img src="pics/project/web-5.png" alt="">
+        <a href="https://preview.webflow.com/preview/museyl?utm_medium=preview_link&utm_source=dashboard&utm_content=museyl&preview=cea60b9b3d786382a85c74a112840c82&mode=preview" target="_blank">
+          <img src="pics/project/web-5.png" alt="">
+        </a>
       </div>
       <div class="description">
         <div>
@@ -131,7 +141,9 @@
         </div>
         <div>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mollis mattis arcu, sed malesuada risus scelerisque eu. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed eu luctus orci.</p>
-          <a href="">See more >></a>
+          <a href="https://preview.webflow.com/preview/museyl?utm_medium=preview_link&utm_source=dashboard&utm_content=museyl&preview=cea60b9b3d786382a85c74a112840c82&mode=preview" target="_blank">
+            See more >>
+          </a>
         </div>
       </div>
     </div>
