--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon"
     type="image/png"
     href="pics/home/favicon.png">
-<meta property="og:image" content="https://imgur.com/juxaS3y"/>
+<meta name="image" property="og:image" content="https://imgur.com/juxaS3y"/>
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://nguyenxtungdesign.github.io" />
 <meta property="og:title" content="TUNG's graphic/web design portfolio" />
