--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon"
     type="image/png"
     href="pics/home/favicon.png">
-<meta name="image" property="og:image" content="https://drive.google.com/file/d/1Fw4rGJh9hLGMH0KNPgSkYbZwhiqzO7tX/view?usp=sharing"/>
+<meta name="image" property="og:image" content="[https://nguyenxtungdesign.github.io/pics/home/share-thumbnail-pic.png]">
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://nguyenxtungdesign.github.io" />
 <meta property="og:title" content="TUNG's graphic/web design portfolio" />
