--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <h3>an always fresh fruits shop - EC site</h3>
         </div>
         <div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mollis mattis arcu, sed malesuada risus scelerisque eu. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed eu luctus orci.</p>
+          <p>Too tired to go to the store to buy heavy fruits like watermelon or pine apple ? Visit us on Whistle & Fruits. We provide a devoted service with 100% fresh and organic guaranteed fruits to your table.<br> Make an order now with our discounts !!</p>
           <a href="https://nguyenxtungdesign.github.io/whistleandfruits/">See more >></a>
         </div>
       </div>
@@ -89,7 +89,7 @@
           <h3>a peaceful coffee store in Tokyo - homepage</h3>
         </div>
         <div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mollis mattis arcu, sed malesuada risus scelerisque eu. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed eu luctus orci.</p>
+          <p>Located in the heart of Tokyo, HARAJUKU. Unlike others coffee shop with colorful theme and loud music, here in Cafe・ド・リシャス we bring you peaceful mood with relaxing sensations. <br>It’s peace in a cup !!</p>
           <a href="https://nguyenxtungdesign.github.io/cafedorishasu/">See more >></a>
         </div>
       </div>
@@ -106,7 +106,7 @@
           <h3>an eco-friendly plant shop - EC site</h3>
         </div>
         <div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mollis mattis arcu, sed malesuada risus scelerisque eu. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed eu luctus orci.</p>
+          <p>Not only do indoor plants enhance the overall appearance of a space, but they've been shown to boost moods, increase creativity, reduce stress, and eliminate air pollutants — making for a healthier, happier you.<br>Join our social media campaign with hashtag #YourLittlePlant</p>
           <a href="https://preview.webflow.com/preview/project-a0f8f9?utm_medium=preview_link&utm_source=dashboard&utm_content=project-a0f8f9&preview=84a1e55691f938078f61c1f112680c3d&mode=preview" target="_blank">
             See more >>
           </a>
@@ -123,7 +123,7 @@
           <h3>aroma diffuser shop</h3>
         </div>
         <div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mollis mattis arcu, sed malesuada risus scelerisque eu. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed eu luctus orci.</p>
+          <p>One of the best known uses for essential oils is their ability to assist you in unwinding after a tough day.  Oils such as chamomile, lavender and clary sage in a diffuser can give you a much needed break from the stress of the day and help you sleep.</p>
           <a href="">See more >></a>
         </div>
       </div>
