--- a/index.html
+++ b/index.html
@@ -1,236 +1,125 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>T U N G</title>
-  <link rel="icon"
-    type="image/png"
-    href="pics/home/favicon.png">
-<meta name="image" property="og:image" content="https://nguyenxtungdesign.github.io/pics/home/share-thumbnail-pic.png">
-<meta property="og:type" content="website"/>
-<meta property="og:url" content="https://nguyenxtungdesign.github.io" />
-<meta property="og:title" content="TUNG's graphic/web design portfolio" />
-<meta property="og:description" content="Click to see my portfolio" />
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
-  <link rel="stylesheet" href="https://use.typekit.net/iuj4sfr.css">
-  <!-- <link rel="stylesheet" href="css/animate.min.css"> -->
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/> -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="css/style.css">
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <title>T U N G</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.typekit.net/iuj4sfr.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/css/splide.min.css">
+    <link href="./css/main.css" rel="stylesheet">
+    <link href="./css/fonts.css" rel="stylesheet">
+  </head>
+  <body>
 
-</head>
-<body>
-<header>
-  <div>
-    <nav class="hero-nav">
-      <a href="index.html"><img class="logo" src="pics/home/tung-logo.svg" alt="logo"></a>
-      <ul>
-        <li><a href="#">home</a></li>
-        <li><a href="#category">projects</a></li>
-        <li><a href="about.html">about me</a></li>
-      </ul>
-    </nav>
-  </div>
-</header>
-<main>
-<section>
-<div class="main-visual-wrapper">
-  <div class="hero-bg hidden"></div>
-  <div class="hero-name hidden">
-    <div>NGUYEN</div>
-    <div class="middle-name">XUAN</div>
-    <div>TUNG</div>
-  </div>
-</div>
-</section>
-<div class="greeting">
-  <h1>Hello ! My name is Tung.</h1>
-  <p>I am a Graphic / Web design grad student and here are some of my works <i class="far fa-heart"></i></p>
-</div>
-<section>
-  <div id="category" class="category">
-  <ul>
-    <li><a class="active" href="index.html#category">WEB</a></li>
-    <li><a href="advertising.html#category">Advertising</a></li>
-    <li><a href="others.html#category">Others</a></li>
-  </ul>
-  </div>
-  <div class="slideshow-container">
-    <div class="slide">
-      <div class="slide-img-wrapper">
-        <a href="https://nguyenxtungdesign.github.io/whistleandfruits/">
-          <img src="pics/project/web-1.png" alt="">
-        </a>
-      </div>
-      <div class="description">
-        <div>
-          <h2>Whistle & Fruits</h2>
-          <h3>an always fresh fruits shop - EC site</h3>
-        </div>
-        <div>
-          <p>Too tired to go to the store to buy heavy fruits like watermelon or pine apple ? Visit us on Whistle & Fruits. We provide a devoted service with 100% fresh and organic guaranteed fruits to your table.<br> Make an order now with our discounts !!</p>
-          <a href="https://nguyenxtungdesign.github.io/whistleandfruits/">See more >></a>
-        </div>
-      </div>
-    </div>
-    <div class="slide">
-      <div class="slide-img-wrapper">
-      <a href="https://nguyenxtungdesign.github.io/cafedorishasu/">
-        <img src="pics/project/web-2.png" alt="">
-      </a>
-      </div>
-      <div class="description">
-        <div>
-          <h2>Cafeドリシャス</h2>
-          <h3>a peaceful coffee store in Tokyo - homepage</h3>
-        </div>
-        <div>
-          <p>Located in the heart of Tokyo, HARAJUKU. Unlike others coffee shop with colorful theme and loud music, here in Cafe・ド・リシャス we bring you peaceful mood with relaxing sensations. <br>It’s peace in a cup !!</p>
-          <a href="https://nguyenxtungdesign.github.io/cafedorishasu/">See more >></a>
-        </div>
-      </div>
-    </div>
-    <div class="slide">
-      <div class="slide-img-wrapper">
-        <a href="https://preview.webflow.com/preview/project-a0f8f9?utm_medium=preview_link&utm_source=dashboard&utm_content=project-a0f8f9&preview=84a1e55691f938078f61c1f112680c3d&mode=preview" target="_blank">
-          <img src="pics/project/web-3.png" alt="">
-        </a>
-      </div>
-      <div class="description">
-        <div>
-          <h2>#YourLittlePlant</h2>
-          <h3>an eco-friendly plant shop - EC site</h3>
-        </div>
-        <div>
-          <p>Not only do indoor plants enhance the overall appearance of a space, but they've been shown to boost moods, increase creativity, reduce stress, and eliminate air pollutants — making for a healthier, happier you.<br>Join our social media campaign with hashtag #YourLittlePlant</p>
-          <a href="https://preview.webflow.com/preview/project-a0f8f9?utm_medium=preview_link&utm_source=dashboard&utm_content=project-a0f8f9&preview=84a1e55691f938078f61c1f112680c3d&mode=preview" target="_blank">
-            See more >>
+    <div class="hero-header">
+      <nav class="top-navbar navbar navbar-expand-md navbar-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="pics/home/tung-logo.svg" width="95">
           </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="/">home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#showcase">projects</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="/about.html">about me</a>
+              </li>
+          </div>
         </div>
+      </nav>
+      <div class="hero-header-content d-flex flex-column vh-100 justify-content-center align-items-center">
+        <span>NGUYEN</span>
+        <span>XUAN</span>
+        <span>TUNG</span>
       </div>
     </div>
-    <div class="slide">
-      <div class="slide-img-wrapper">
-        <img src="pics/project/web-4.png" alt="">
-      </div>
-      <div class="description">
-        <div>
-          <h2>Ambient Vibes</h2>
-          <h3>aroma diffuser shop</h3>
-        </div>
-        <div>
-          <p>One of the best known uses for essential oils is their ability to assist you in unwinding after a tough day.  Oils such as chamomile, lavender and clary sage in a diffuser can give you a much needed break from the stress of the day and help you sleep.</p>
-          <a href="">See more >></a>
-        </div>
-      </div>
+
+    <div class="container greeting text-center">
+      <h1>Hello ! My name is Tung.</h1>
+      <p>I am a Graphic / Web design grad student and here are some of my works <i class="far fa-heart"></i></p>
     </div>
-    <div class="slide">
-      <div class="slide-img-wrapper">
-        <a href="https://preview.webflow.com/preview/museyl?utm_medium=preview_link&utm_source=dashboard&utm_content=museyl&preview=cea60b9b3d786382a85c74a112840c82&mode=preview" target="_blank">
-          <img src="pics/project/web-5.png" alt="">
-        </a>
-      </div>
-      <div class="description">
-        <div>
-          <h2>Museyl</h2>
-          <h3>Travel tour booking site</h3>
-        </div>
-        <div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mollis mattis arcu, sed malesuada risus scelerisque eu. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed eu luctus orci.</p>
-          <a href="https://preview.webflow.com/preview/museyl?utm_medium=preview_link&utm_source=dashboard&utm_content=museyl&preview=cea60b9b3d786382a85c74a112840c82&mode=preview" target="_blank">
-            See more >>
-          </a>
-        </div>
-      </div>
-    </div>
-    <!-- next and previous button -->
-    <a class="prev" onclick="plusSlides(-1)"><img src="pics/home/left-arrow.png" alt="previous"></a>
-    <a class="next" onclick="plusSlides(1)"><img src="pics/home/right-arrow.png" alt="next"></a>
-    <!-- the jump dots -->
-    <div class="dot-wrap">
-      <div class="dot active" onclick="currentSlide(1)"></div>
-      <div class="dot" onclick="currentSlide(2)"></div>
-      <div class="dot" onclick="currentSlide(3)"></div>
-      <div class="dot" onclick="currentSlide(4)"></div>
-      <div class="dot" onclick="currentSlide(5)"></div>
-    </div>
-  </div>
-</section>
-</main>
-<footer>
-  <div class="copyright">
-    Copyright Nguyen Xuan Tung 2020
-  </div>
-  <div>
-    <nav>
-      <a href="index.html"><img class="logo" src="pics/home/tung-logo-2.svg" alt="logo"></a>
-      <ul>
-        <li><a href="#">to top</a></li>
-        <li><a href="#category">projects</a></li>
-        <li><a href="about.html">about me</a></li>
+
+    <div class="container showcase" id="showcase">
+
+      <ul class="nav nav-pills showcase-categories" role="tablist">
+        <li class="nav-item" role="presentation">
+          <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-web" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Web</button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-advertising" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Advertising</button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-others" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Others</button>
+        </li>
       </ul>
-    </nav>
-  </div>
-  <div class="send-me">
-    <p>Interested in doing a project together?</p>
-    <h3><a href="">Email me >></a></h3>
-  </div>
-  <div></div>
-</footer>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-<script type="text/javascript">
-var slideIndex = 1;
-showSlides(slideIndex);
 
-// Next/previous controls
-function plusSlides(n) {
-  showSlides(slideIndex += n);
-}
+      <div class="tab-content">
+        <div class="tab-pane fade show active" id="pills-web" role="tabpanel" aria-labelledby="pills-web-tab">
+          <div class="splide">
+            <div class="splide__arrows">
+              <button class="splide__arrow splide__arrow--prev">
+                <img src="./pics/home/left-arrow.png">
+              </button>
+              <button class="splide__arrow splide__arrow--next">
+                <img src="./pics/home/right-arrow.png">
+              </button>
+            </div>
+            <div class="splide__track">
+              <ul class="splide__list">
+                <li class="splide__slide">
+                  <div class="showcase-item row">
+                    <div class="col-xs-12 col-xl-8 col-xxl-7 text-center">
+                      <a href=""><img src="./pics/project/o-1.png"></a>
+                    </div>
+                    <div class="col-xs-12 col-xl-4 col-xxl-5">
+                      <h2>Whistle & Fruits</h2>
+                      <span class="subtitle">an always fresh fruits shop - EC site</span>
+                      <p>Too tired to go to the store to buy heavy fruits like watermelon or pine apple ? Visit us on Whistle & Fruits. We provide a devoted service with 100% fresh and organic guaranteed fruits to your table.
+                      Make an order now with our discounts !!</p>
+                    </div>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
 
-// Thumbnail image controls
-function currentSlide(n) {
-  showSlides(slideIndex = n);
-}
+        <div class="tab-pane fade" id="pills-advertising" role="tabpanel" aria-labelledby="pills-advertising-tab">
+        </div>
 
-function showSlides(n) {
-  var i;
-  var slides = document.getElementsByClassName("slide");
-  var dots = document.getElementsByClassName("dot");
-  if (n > slides.length) {slideIndex = 1}
-  if (n < 1) {slideIndex = slides.length}
-  for (i = 0; i < slides.length; i++) {
-      slides[i].style.display = "none";
-  }
-  for (i = 0; i < dots.length; i++) {
-      dots[i].className = dots[i].className.replace(" active", "");
-  }
-  slides[slideIndex-1].style.display = "flex";
-  dots[slideIndex-1].className += " active";
-}
+        <div class="tab-pane fade" id="pills-others" role="tabpanel" aria-labelledby="pills-others-tab">
+        </div>
+      </div>
+    </div>
 
-// slide animation
-// $('.prev','.next','.dot').on('click',function(){
-//   $('.slide-img-wrapper').addClass('animation-reverse');
-// })
-</script>
-</body>
-
-
-
-
+    <div class="hero-footer">
+      <div class="hero-footer-content d-flex flex-column vh-100 justify-content-center align-items-center text-center">
+        <p>Interested in doing a project together?</p>
+        <span id="email-me"><a href="/about.html">Email me >></a></span>
+      </div>
+      <div class="copyright" id="copyright">Copyright Nguyen Xuan Tung</div>
+    </div>
 
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
+    <script>
+      new Splide('.splide', {
+        type: 'loop',
+      }).mount();
 
-
-
-
-
-
-
-
-
+      document.getElementById("copyright").innerHTML += (" "  + new Date().getFullYear());
+    </script>
+  </body>
 </html>
+
