--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/css/splide.min.css">
     <link href="./css/main.css" rel="stylesheet">
     <link href="./css/fonts.css" rel="stylesheet">
+    <link href="./css/keyframes.css" rel="stylesheet">
   </head>
   <body>
 
