add contents to slide

--- a/index.html
+++ b/index.html
@@ -80,13 +80,61 @@
                 <li class="splide__slide">
                   <div class="showcase-item row">
                     <div class="col-xs-12 col-xl-8 col-xxl-7 text-center">
-                      <a href=""><img src="./pics/project/o-1.png"></a>
+                      <a href=""><img src="./pics/project/web-1.png"></a>
                     </div>
                     <div class="col-xs-12 col-xl-4 col-xxl-5">
                       <h2>Whistle & Fruits</h2>
                       <span class="subtitle">an always fresh fruits shop - EC site</span>
                       <p>Too tired to go to the store to buy heavy fruits like watermelon or pine apple ? Visit us on Whistle & Fruits. We provide a devoted service with 100% fresh and organic guaranteed fruits to your table.
                       Make an order now with our discounts !!</p>
+                    </div>
+                  </div>
+                </li>
+                <li class="splide__slide">
+                  <div class="showcase-item row">
+                    <div class="col-xs-12 col-xl-8 col-xxl-7 text-center">
+                      <a href=""><img src="./pics/project/web-2.png"></a>
+                    </div>
+                    <div class="col-xs-12 col-xl-4 col-xxl-5">
+                      <h2>Cafeドリシャス</h2>
+                      <span class="subtitle">a peaceful coffee store in Tokyo - homepage</span>
+                      <p>Located in the heart of Tokyo, HARAJUKU. Unlike others coffee shop with colorful theme and loud music, here in Cafe・ド・リシャス we bring you peaceful mood with relaxing sensations. <br>It’s peace in a cup !!</p>
+                    </div>
+                  </div>
+                </li>
+                <li class="splide__slide">
+                  <div class="showcase-item row">
+                    <div class="col-xs-12 col-xl-8 col-xxl-7 text-center">
+                      <a href=""><img src="./pics/project/web-3.png"></a>
+                    </div>
+                    <div class="col-xs-12 col-xl-4 col-xxl-5">
+                      <h2>#YourLittlePlant</h2>
+                      <span class="subtitle">an eco-friendly plant shop - EC site</span>
+                      <p>Not only do indoor plants enhance the overall appearance of a space, but they've been shown to boost moods, increase creativity, reduce stress, and eliminate air pollutants — making for a healthier, happier you.<br>Join our social media campaign with hashtag #YourLittlePlant</p>
+                    </div>
+                  </div>
+                </li>
+                <li class="splide__slide">
+                  <div class="showcase-item row">
+                    <div class="col-xs-12 col-xl-8 col-xxl-7 text-center">
+                      <a href=""><img src="./pics/project/web-4.png"></a>
+                    </div>
+                    <div class="col-xs-12 col-xl-4 col-xxl-5">
+                      <h2>Ambient Vibes</h2>
+                      <span class="subtitle">aroma diffuser shop</span>
+                      <p>One of the best known uses for essential oils is their ability to assist you in unwinding after a tough day.  Oils such as chamomile, lavender and clary sage in a diffuser can give you a much needed break from the stress of the day and help you sleep.</p>
+                    </div>
+                  </div>
+                </li>
+                <li class="splide__slide">
+                  <div class="showcase-item row">
+                    <div class="col-xs-12 col-xl-8 col-xxl-7 text-center">
+                      <a href=""><img src="./pics/project/web-5.png"></a>
+                    </div>
+                    <div class="col-xs-12 col-xl-4 col-xxl-5">
+                      <h2>#YourLittlePlant</h2>
+                      <span class="subtitle">an eco-friendly plant shop - EC site</span>
+                      <p>Not only do indoor plants enhance the overall appearance of a space, but they've been shown to boost moods, increase creativity, reduce stress, and eliminate air pollutants — making for a healthier, happier you.<br>Join our social media campaign with hashtag #YourLittlePlant</p>
                     </div>
                   </div>
                 </li>
@@ -123,4 +171,3 @@
     </script>
   </body>
 </html>
-
