Change contents splide

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
       <div class="tab-content">
         <div class="tab-pane fade show active" id="pills-web" role="tabpanel" aria-labelledby="pills-web-tab">
-          <div class="splide">
+          <div class="splide" id="splide-web">
             <div class="splide__arrows">
               <button class="splide__arrow splide__arrow--prev">
                 <img src="./pics/home/left-arrow.png">
@@ -132,8 +132,8 @@
                       <a href=""><img src="./pics/project/web-5.png"></a>
                     </div>
                     <div class="col-xs-12 col-xl-4 col-xxl-5">
-                      <h2>#YourLittlePlant</h2>
-                      <span class="subtitle">an eco-friendly plant shop - EC site</span>
+                      <h2>Museyl</h2>
+                      <span class="subtitle">Travel tour booking site</span>
                       <p>Not only do indoor plants enhance the overall appearance of a space, but they've been shown to boost moods, increase creativity, reduce stress, and eliminate air pollutants — making for a healthier, happier you.<br>Join our social media campaign with hashtag #YourLittlePlant</p>
                     </div>
                   </div>
@@ -144,9 +144,183 @@
         </div>
 
         <div class="tab-pane fade" id="pills-advertising" role="tabpanel" aria-labelledby="pills-advertising-tab">
+          <div class="splide" id="splide-advertising">
+            <div class="splide__arrows">
+              <button class="splide__arrow splide__arrow--prev">
+                <img src="./pics/home/left-arrow.png">
+              </button>
+              <button class="splide__arrow splide__arrow--next">
+                <img src="./pics/home/right-arrow.png">
+              </button>
+            </div>
+            <div class="splide__track">
+              <ul class="splide__list">
+                <li class="splide__slide">
+                  <div class="showcase-item row">
+                    <div class="col-xs-12 col-xl-8 col-xxl-7 text-center">
+                      <a href=""><img src="./pics/project/ads-1.png"></a>
+                    </div>
+                    <div class="col-xs-12 col-xl-4 col-xxl-5">
+                      <h2>DongDu talk show</h2>
+                      <span class="subtitle">an always fresh fruits shop - EC site</span>
+                      <p>Too tired to go to the store to buy heavy fruits like watermelon or pine apple ? Visit us on Whistle & Fruits. We provide a devoted service with 100% fresh and organic guaranteed fruits to your table.
+                      Make an order now with our discounts !!</p>
+                    </div>
+                  </div>
+                </li>
+                <li class="splide__slide">
+                  <div class="showcase-item row">
+                    <div class="col-xs-12 col-xl-8 col-xxl-7 text-center">
+                      <a href=""><img src="./pics/project/ads-2.png"></a>
+                    </div>
+                    <div class="col-xs-12 col-xl-4 col-xxl-5">
+                      <h2>Cafeドリシャス</h2>
+                      <span class="subtitle">a peaceful coffee store in Tokyo - homepage</span>
+                      <p>Located in the heart of Tokyo, HARAJUKU. Unlike others coffee shop with colorful theme and loud music, here in Cafe・ド・リシャス we bring you peaceful mood with relaxing sensations. <br>It’s peace in a cup !!</p>
+                    </div>
+                  </div>
+                </li>
+                <li class="splide__slide">
+                  <div class="showcase-item row">
+                    <div class="col-xs-12 col-xl-8 col-xxl-7 text-center">
+                      <a href=""><img src="./pics/project/ads-3.png"></a>
+                    </div>
+                    <div class="col-xs-12 col-xl-4 col-xxl-5">
+                      <h2>#YourLittlePlant</h2>
+                      <span class="subtitle">an eco-friendly plant shop - EC site</span>
+                      <p>Not only do indoor plants enhance the overall appearance of a space, but they've been shown to boost moods, increase creativity, reduce stress, and eliminate air pollutants — making for a healthier, happier you.<br>Join our social media campaign with hashtag #YourLittlePlant</p>
+                    </div>
+                  </div>
+                </li>
+                <li class="splide__slide">
+                  <div class="showcase-item row">
+                    <div class="col-xs-12 col-xl-8 col-xxl-7 text-center">
+                      <a href=""><img src="./pics/project/ads-4.png"></a>
+                    </div>
+                    <div class="col-xs-12 col-xl-4 col-xxl-5">
+                      <h2>Ambient Vibes</h2>
+                      <span class="subtitle">aroma diffuser shop</span>
+                      <p>One of the best known uses for essential oils is their ability to assist you in unwinding after a tough day.  Oils such as chamomile, lavender and clary sage in a diffuser can give you a much needed break from the stress of the day and help you sleep.</p>
+                    </div>
+                  </div>
+                </li>
+                <li class="splide__slide">
+                  <div class="showcase-item row">
+                    <div class="col-xs-12 col-xl-8 col-xxl-7 text-center">
+                      <a href=""><img src="./pics/project/ads-5.png"></a>
+                    </div>
+                    <div class="col-xs-12 col-xl-4 col-xxl-5">
+                      <h2>Museyl</h2>
+                      <span class="subtitle">Travel tour booking site</span>
+                      <p>Not only do indoor plants enhance the overall appearance of a space, but they've been shown to boost moods, increase creativity, reduce stress, and eliminate air pollutants — making for a healthier, happier you.<br>Join our social media campaign with hashtag #YourLittlePlant</p>
+                    </div>
+                  </div>
+                </li>
+                <li class="splide__slide">
+                  <div class="showcase-item row">
+                    <div class="col-xs-12 col-xl-8 col-xxl-7 text-center">
+                      <a href=""><img src="./pics/project/ads-6.png"></a>
+                    </div>
+                    <div class="col-xs-12 col-xl-4 col-xxl-5">
+                      <h2>Museyl</h2>
+                      <span class="subtitle">Travel tour booking site</span>
+                      <p>Not only do indoor plants enhance the overall appearance of a space, but they've been shown to boost moods, increase creativity, reduce stress, and eliminate air pollutants — making for a healthier, happier you.<br>Join our social media campaign with hashtag #YourLittlePlant</p>
+                    </div>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
 
         <div class="tab-pane fade" id="pills-others" role="tabpanel" aria-labelledby="pills-others-tab">
+          <div class="splide" id="splide-others">
+            <div class="splide__arrows">
+              <button class="splide__arrow splide__arrow--prev">
+                <img src="./pics/home/left-arrow.png">
+              </button>
+              <button class="splide__arrow splide__arrow--next">
+                <img src="./pics/home/right-arrow.png">
+              </button>
+            </div>
+            <div class="splide__track">
+              <ul class="splide__list">
+                <li class="splide__slide">
+                  <div class="showcase-item row">
+                    <div class="col-xs-12 col-xl-8 col-xxl-7 text-center">
+                      <a href=""><img src="./pics/project/o-1.png"></a>
+                    </div>
+                    <div class="col-xs-12 col-xl-4 col-xxl-5">
+                      <h2>Whistle & Fruits</h2>
+                      <span class="subtitle">an always fresh fruits shop - EC site</span>
+                      <p>Too tired to go to the store to buy heavy fruits like watermelon or pine apple ? Visit us on Whistle & Fruits. We provide a devoted service with 100% fresh and organic guaranteed fruits to your table.
+                      Make an order now with our discounts !!</p>
+                    </div>
+                  </div>
+                </li>
+                <li class="splide__slide">
+                  <div class="showcase-item row">
+                    <div class="col-xs-12 col-xl-8 col-xxl-7 text-center">
+                      <a href=""><img src="./pics/project/o-2.png"></a>
+                    </div>
+                    <div class="col-xs-12 col-xl-4 col-xxl-5">
+                      <h2>Cafeドリシャス</h2>
+                      <span class="subtitle">a peaceful coffee store in Tokyo - homepage</span>
+                      <p>Located in the heart of Tokyo, HARAJUKU. Unlike others coffee shop with colorful theme and loud music, here in Cafe・ド・リシャス we bring you peaceful mood with relaxing sensations. <br>It’s peace in a cup !!</p>
+                    </div>
+                  </div>
+                </li>
+                <li class="splide__slide">
+                  <div class="showcase-item row">
+                    <div class="col-xs-12 col-xl-8 col-xxl-7 text-center">
+                      <a href=""><img src="./pics/project/o-3.png"></a>
+                    </div>
+                    <div class="col-xs-12 col-xl-4 col-xxl-5">
+                      <h2>#YourLittlePlant</h2>
+                      <span class="subtitle">an eco-friendly plant shop - EC site</span>
+                      <p>Not only do indoor plants enhance the overall appearance of a space, but they've been shown to boost moods, increase creativity, reduce stress, and eliminate air pollutants — making for a healthier, happier you.<br>Join our social media campaign with hashtag #YourLittlePlant</p>
+                    </div>
+                  </div>
+                </li>
+                <li class="splide__slide">
+                  <div class="showcase-item row">
+                    <div class="col-xs-12 col-xl-8 col-xxl-7 text-center">
+                      <a href=""><img src="./pics/project/o-4.png"></a>
+                    </div>
+                    <div class="col-xs-12 col-xl-4 col-xxl-5">
+                      <h2>Ambient Vibes</h2>
+                      <span class="subtitle">aroma diffuser shop</span>
+                      <p>One of the best known uses for essential oils is their ability to assist you in unwinding after a tough day.  Oils such as chamomile, lavender and clary sage in a diffuser can give you a much needed break from the stress of the day and help you sleep.</p>
+                    </div>
+                  </div>
+                </li>
+                <li class="splide__slide">
+                  <div class="showcase-item row">
+                    <div class="col-xs-12 col-xl-8 col-xxl-7 text-center">
+                      <a href=""><img src="./pics/project/o-5.png"></a>
+                    </div>
+                    <div class="col-xs-12 col-xl-4 col-xxl-5">
+                      <h2>Museyl</h2>
+                      <span class="subtitle">Travel tour booking site</span>
+                      <p>Not only do indoor plants enhance the overall appearance of a space, but they've been shown to boost moods, increase creativity, reduce stress, and eliminate air pollutants — making for a healthier, happier you.<br>Join our social media campaign with hashtag #YourLittlePlant</p>
+                    </div>
+                  </div>
+                </li>
+                <li class="splide__slide">
+                  <div class="showcase-item row">
+                    <div class="col-xs-12 col-xl-8 col-xxl-7 text-center">
+                      <a href=""><img src="./pics/project/o-6.png"></a>
+                    </div>
+                    <div class="col-xs-12 col-xl-4 col-xxl-5">
+                      <h2>Museyl</h2>
+                      <span class="subtitle">Travel tour booking site</span>
+                      <p>Not only do indoor plants enhance the overall appearance of a space, but they've been shown to boost moods, increase creativity, reduce stress, and eliminate air pollutants — making for a healthier, happier you.<br>Join our social media campaign with hashtag #YourLittlePlant</p>
+                    </div>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -163,10 +337,17 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
     <script>
-      new Splide('.splide', {
+      new Splide('#splide-web', {
         type: 'loop',
       }).mount();
 
+      new Splide('#splide-advertising', {
+        type: 'loop',
+      }).mount();
+
+      new Splide('#splide-others', {
+        type: 'loop',
+      }).mount();
       document.getElementById("copyright").innerHTML += (" "  + new Date().getFullYear());
     </script>
   </body>
