--- a/index.html
+++ b/index.html
@@ -337,18 +337,40 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
     <script>
-      new Splide('#splide-web', {
-        type: 'loop',
-      }).mount();
+      window.onload = function(e){
+        var tabAdvertisingLoaded = false;
+        var tabOthersLoaded = false;
 
-      new Splide('#splide-advertising', {
-        type: 'loop',
-      }).mount();
+        var tabAdvertising = document.querySelector('button[data-bs-target="#pills-advertising"]');
+        var tabOthers = document.querySelector('button[data-bs-target="#pills-others"]');
 
-      new Splide('#splide-others', {
-        type: 'loop',
-      }).mount();
-      document.getElementById("copyright").innerHTML += (" "  + new Date().getFullYear());
+        new Splide('#splide-web', {
+          type: 'loop',
+        }).mount();
+
+        tabAdvertising.addEventListener('shown.bs.tab', function (event) {
+          if (tabAdvertisingLoaded === false) {
+            new Splide('#splide-advertising', {
+              type: 'loop',
+            }).mount();
+
+            tabAdvertisingLoaded = true;
+          }
+        });
+
+        tabOthers.addEventListener('shown.bs.tab', function (event) {
+          if (tabOthersLoaded === false) {
+            new Splide('#splide-others', {
+              type: 'loop',
+            }).mount();
+
+            tabOthersLoaded = true;
+          }
+        });
+
+        document.getElementById("copyright").innerHTML += (" "  + new Date().getFullYear());
+      }
+
     </script>
   </body>
 </html>
