title & subtitle change

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     </div>
                     <div class="col-xs-12 col-xl-4 col-xxl-5">
                       <h2>DongDu talk show</h2>
-                      <span class="subtitle">an always fresh fruits shop - EC site</span>
+                      <span class="subtitle">logo, poster and uniform design - graphic design</span>
                       <p>Too tired to go to the store to buy heavy fruits like watermelon or pine apple ? Visit us on Whistle & Fruits. We provide a devoted service with 100% fresh and organic guaranteed fruits to your table.
                       Make an order now with our discounts !!</p>
                     </div>
@@ -174,8 +174,8 @@
                       <a href=""><img src="./pics/project/ads-2.png"></a>
                     </div>
                     <div class="col-xs-12 col-xl-4 col-xxl-5">
-                      <h2>Cafeドリシャス</h2>
-                      <span class="subtitle">a peaceful coffee store in Tokyo - homepage</span>
+                      <h2>朝摘みオレンジ</h2>
+                      <span class="subtitle">desktop publish advertisement design</span>
                       <p>Located in the heart of Tokyo, HARAJUKU. Unlike others coffee shop with colorful theme and loud music, here in Cafe・ド・リシャス we bring you peaceful mood with relaxing sensations. <br>It’s peace in a cup !!</p>
                     </div>
                   </div>
@@ -186,8 +186,8 @@
                       <a href=""><img src="./pics/project/ads-3.png"></a>
                     </div>
                     <div class="col-xs-12 col-xl-4 col-xxl-5">
-                      <h2>#YourLittlePlant</h2>
-                      <span class="subtitle">an eco-friendly plant shop - EC site</span>
+                      <h2>Zespri kiwifruit</h2>
+                      <span class="subtitle">brochure design</span>
                       <p>Not only do indoor plants enhance the overall appearance of a space, but they've been shown to boost moods, increase creativity, reduce stress, and eliminate air pollutants — making for a healthier, happier you.<br>Join our social media campaign with hashtag #YourLittlePlant</p>
                     </div>
                   </div>
@@ -198,8 +198,8 @@
                       <a href=""><img src="./pics/project/ads-4.png"></a>
                     </div>
                     <div class="col-xs-12 col-xl-4 col-xxl-5">
-                      <h2>Ambient Vibes</h2>
-                      <span class="subtitle">aroma diffuser shop</span>
+                      <h2>Tokyo Design Academy - Web banner</h2>
+                      <span class="subtitle">a design to promote TDA's web departure</span>
                       <p>One of the best known uses for essential oils is their ability to assist you in unwinding after a tough day.  Oils such as chamomile, lavender and clary sage in a diffuser can give you a much needed break from the stress of the day and help you sleep.</p>
                     </div>
                   </div>
@@ -210,8 +210,8 @@
                       <a href=""><img src="./pics/project/ads-5.png"></a>
                     </div>
                     <div class="col-xs-12 col-xl-4 col-xxl-5">
-                      <h2>Museyl</h2>
-                      <span class="subtitle">Travel tour booking site</span>
+                      <h2>Lumine sale promotion</h2>
+                      <span class="subtitle">outdoor banner design for shopping mall's seasonal event</span>
                       <p>Not only do indoor plants enhance the overall appearance of a space, but they've been shown to boost moods, increase creativity, reduce stress, and eliminate air pollutants — making for a healthier, happier you.<br>Join our social media campaign with hashtag #YourLittlePlant</p>
                     </div>
                   </div>
@@ -222,8 +222,8 @@
                       <a href=""><img src="./pics/project/ads-6.png"></a>
                     </div>
                     <div class="col-xs-12 col-xl-4 col-xxl-5">
-                      <h2>Museyl</h2>
-                      <span class="subtitle">Travel tour booking site</span>
+                      <h2>ianak!</h2>
+                      <span class="subtitle">sale promotion plan for a local bakery shop</span>
                       <p>Not only do indoor plants enhance the overall appearance of a space, but they've been shown to boost moods, increase creativity, reduce stress, and eliminate air pollutants — making for a healthier, happier you.<br>Join our social media campaign with hashtag #YourLittlePlant</p>
                     </div>
                   </div>
@@ -251,8 +251,8 @@
                       <a href=""><img src="./pics/project/o-1.png"></a>
                     </div>
                     <div class="col-xs-12 col-xl-4 col-xxl-5">
-                      <h2>Whistle & Fruits</h2>
-                      <span class="subtitle">an always fresh fruits shop - EC site</span>
+                      <h2>The night</h2>
+                      <span class="subtitle">a photobook of a lonely soul</span>
                       <p>Too tired to go to the store to buy heavy fruits like watermelon or pine apple ? Visit us on Whistle & Fruits. We provide a devoted service with 100% fresh and organic guaranteed fruits to your table.
                       Make an order now with our discounts !!</p>
                     </div>
@@ -264,7 +264,7 @@
                       <a href=""><img src="./pics/project/o-2.png"></a>
                     </div>
                     <div class="col-xs-12 col-xl-4 col-xxl-5">
-                      <h2>Cafeドリシャス</h2>
+                      <h2>Realistic vector art</h2>
                       <span class="subtitle">a peaceful coffee store in Tokyo - homepage</span>
                       <p>Located in the heart of Tokyo, HARAJUKU. Unlike others coffee shop with colorful theme and loud music, here in Cafe・ド・リシャス we bring you peaceful mood with relaxing sensations. <br>It’s peace in a cup !!</p>
                     </div>
@@ -276,8 +276,8 @@
                       <a href=""><img src="./pics/project/o-3.png"></a>
                     </div>
                     <div class="col-xs-12 col-xl-4 col-xxl-5">
-                      <h2>#YourLittlePlant</h2>
-                      <span class="subtitle">an eco-friendly plant shop - EC site</span>
+                      <h2>Harajuku walkthrough</h2>
+                      <span class="subtitle">tour guiding free paper</span>
                       <p>Not only do indoor plants enhance the overall appearance of a space, but they've been shown to boost moods, increase creativity, reduce stress, and eliminate air pollutants — making for a healthier, happier you.<br>Join our social media campaign with hashtag #YourLittlePlant</p>
                     </div>
                   </div>
@@ -288,8 +288,8 @@
                       <a href=""><img src="./pics/project/o-4.png"></a>
                     </div>
                     <div class="col-xs-12 col-xl-4 col-xxl-5">
-                      <h2>Ambient Vibes</h2>
-                      <span class="subtitle">aroma diffuser shop</span>
+                      <h2>Product package design</h2>
+                      <span class="subtitle">for Kneipp lip balm</span>
                       <p>One of the best known uses for essential oils is their ability to assist you in unwinding after a tough day.  Oils such as chamomile, lavender and clary sage in a diffuser can give you a much needed break from the stress of the day and help you sleep.</p>
                     </div>
                   </div>
@@ -300,8 +300,8 @@
                       <a href=""><img src="./pics/project/o-5.png"></a>
                     </div>
                     <div class="col-xs-12 col-xl-4 col-xxl-5">
-                      <h2>Museyl</h2>
-                      <span class="subtitle">Travel tour booking site</span>
+                      <h2>Eco-mask design</h2>
+                      <span class="subtitle">wear your masks with styles</span>
                       <p>Not only do indoor plants enhance the overall appearance of a space, but they've been shown to boost moods, increase creativity, reduce stress, and eliminate air pollutants — making for a healthier, happier you.<br>Join our social media campaign with hashtag #YourLittlePlant</p>
                     </div>
                   </div>
@@ -312,8 +312,8 @@
                       <a href=""><img src="./pics/project/o-6.png"></a>
                     </div>
                     <div class="col-xs-12 col-xl-4 col-xxl-5">
-                      <h2>Museyl</h2>
-                      <span class="subtitle">Travel tour booking site</span>
+                      <h2>Business card design</h2>
+                      <span class="subtitle">This bicycle shop has very unique products</span>
                       <p>Not only do indoor plants enhance the overall appearance of a space, but they've been shown to boost moods, increase creativity, reduce stress, and eliminate air pollutants — making for a healthier, happier you.<br>Join our social media campaign with hashtag #YourLittlePlant</p>
                     </div>
                   </div>
