--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     <div class="contact-page">
       <nav class="top-navbar navbar navbar-expand-md navbar-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="index.html">
             <img src="pics/home/tung-logo.svg" width="95">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,13 +27,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/">home</a>
+                <a class="nav-link" aria-current="page" href="index.html">home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#showcase">projects</a>
+                <a class="nav-link" aria-current="page" href="index.html#showcase">projects</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/about.html">about me</a>
+                <a class="nav-link" aria-current="page" href="about.html">about me</a>
               </li>
           </div>
         </div>
@@ -110,5 +110,3 @@
     </script>
   </body>
 </html>
-
-
